sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/mosquitto/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: broker
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  name: mosquitto
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: mosquitto-headless
  replicas: 1
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app.kubernetes.io/component: broker
      app.kubernetes.io/instance: mosquitto
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/component: broker
        app.kubernetes.io/instance: mosquitto
        app.kubernetes.io/name: mosquitto
    spec:
      serviceAccountName: mosquitto-sa
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1883
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: mosquitto
          image: "docker.io/library/eclipse-mosquitto:2.1.2-alpine"
          imagePullPolicy: IfNotPresent
          command:
            - mosquitto
          args:
            - -c
            - /mosquitto/config/mosquitto.conf
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          ports:
            - name: mqtt
              containerPort: 1883
              protocol: TCP
            - name: websocket
              containerPort: 9001
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            tcpSocket:
              port: mqtt
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 15
            tcpSocket:
              port: mqtt
            timeoutSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: data
              mountPath: /mosquitto/data
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/component: broker
          app.kubernetes.io/instance: mosquitto
          app.kubernetes.io/name: mosquitto
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: cluster-nobackup
