sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/mosquitto/mqttx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-mqttx
  labels:
    app.kubernetes.io/component: mqttx-web
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: mqttx-web
      app.kubernetes.io/instance: mosquitto
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/component: mqttx-web
        app.kubernetes.io/instance: mosquitto
        app.kubernetes.io/name: mosquitto
    spec:
      containers:
        - name: mqttx-web
          image: "docker.io/emqx/mqttx-web:v1.13.0"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 96Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: mqttx-web
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  name: mosquitto-mqttx
spec:
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: mqttx-web
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  type: ClusterIP
