sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  name: mosquitto
spec:
  type: ClusterIP
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
      protocol: TCP
    - name: websocket
      port: 9001
      targetPort: websocket
      protocol: TCP
  selector:
    app.kubernetes.io/component: broker
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  name: mosquitto-headless
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: broker
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
      protocol: TCP
    - name: websocket
      port: 9001
      targetPort: websocket
      protocol: TCP
