sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  name: mosquitto-websocket
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: mqtt.indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
        - mqtt.indigo.dalmura.cloud
      secretName: mosquitto-ws-cert
  rules:
    - host: mqtt.indigo.dalmura.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  name: websocket
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  name: mosquitto-mqttx
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: mqtt-ui.indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
        - mqtt-ui.indigo.dalmura.cloud
      secretName: mosquitto-ui-cert
  rules:
    - host: mqtt-ui.indigo.dalmura.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto-mqttx
                port:
                  name: http
