sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/mosquitto/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: mosquitto
      app.kubernetes.io/name: mosquitto
  ingress:
    # Allow traffic from within the same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosquitto
    # Allow traffic from Traefik Private (Websockets/MQTTX)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
            - port: "9001"
              protocol: TCP
    # Allow traffic from Frigate
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: frigate
            app.kubernetes.io/name: frigate
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    # Allow traffic from Home Assistant
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-assistant
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
  egress:
    # Allow DNS lookups
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow intra-namespace egress
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosquitto
